[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.4", features = ["cors"] }

sqlx = { version = "0.7", features = ["macros", "postgres", "runtime-tokio-rustls"] }
dotenvy = "0.15"
url = "2"
